# facewatch

./: README.md  docker-compose.yaml
backend/: .env.docker  .env.local  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 277a0d4cf3c6_create_roi_detections_table.py
backend/app/: main.py
backend/app/core/: config.py  state.py
backend/app/models/: __init__.py  roi.py
backend/app/routers/: frame.py  roi.py  video.py  websocket.py
backend/app/schemas/: roi.py
backend/app/services/: face_detector.py  frame_processor.py  roi_service.py
backend/app/utils/: image.py
frontend/: Dockerfile
frontend/src/: App.css  App.tsx
frontend/src/components/: Header.tsx  StatusBadge.tsx  VideoPanel.tsx
frontend/src/types/: roi.ts
