[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dlib>=20.0.1",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
